<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>leaflet-bridge</artifactId>
    <packaging>pom</packaging>
    <version>3.2.6</version>

    <parent>
        <groupId>hu.psprog.leaflet</groupId>
        <artifactId>leaflet-stack-base-bom</artifactId>
        <version>1.0-r2110.1</version>
    </parent>

    <modules>
        <module>api</module>
        <module>impl</module>
        <module>spring-integration</module>
    </modules>

    <properties>

        <!-- Java environment version -->
        <java.version>11</java.version>

        <!-- compiler settings -->
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <skip.it>false</skip.it>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>hu.psprog.leaflet</groupId>
                <artifactId>bridge-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>hu.psprog.leaflet</groupId>
                <artifactId>bridge-implementation</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <!--suppress UnresolvedMavenProperty -->
                    <argLine>${argLine.surefire}</argLine>
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/domain/**</exclude>
                        <exclude>**/config/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>ut-pre</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/coverage/jacoco-ut.exec</destFile>
                            <propertyName>argLine.surefire</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>ut-post</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <dataFile>${project.build.directory}/coverage/jacoco-ut.exec</dataFile>
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>com.fasterxml.jackson.jaxrs.json/com.fasterxml.jackson.jaxrs.json=leaflet.component.bridge.integration.spring</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>